get 验证地址栏输入localhost/home

--- a/crm/pom.xml
+++ b/crm/pom.xml
@@ -91,6 +91,12 @@
       <artifactId>spring-web</artifactId>
       <version>4.2.6.RELEASE</version>
     </dependency>
+    <!--Shiro-->
+        <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-all</artifactId>
+          <version>1.2.4</version>
+        </dependency>
 
     <!--other-->
     <dependency>
