--- a/crm/pom.xml
+++ b/crm/pom.xml
@@ -52,6 +52,7 @@
       <artifactId>commons-dbcp2</artifactId>
       <version>2.1.1</version>
     </dependency>
+    <!--md5加密依赖-->
     <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
